kubernetes/vader/applications/database/influxdb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  namespace: database

spec:
  selector:
    matchLabels:
      app: influxdb
  replicas: 1
  template:
    metadata:
      labels: 
        app: influxdb
    spec:
      containers:
        - name: influxdb
          image: docker.io/influxdb:2.0.8
          volumeMounts:
            - name: data
              mountPath: /var/lib/influxdb
          ports:
            - containerPort: 8086
              name: http
      volumes:
        - name: data
          nfs:
            server: bandit-nfs.local
            path: /srv/nfs/vader/database/influxdb
